--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,12 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+.idea
+**.iml
+download
+target
+
+src/main/kotlin/com/juicelabs/fhir/model
+src/test/kotlin/com/juicelabs/fhir/model
+src/test/resources/model/sample_data
