--- a/pom.xml
+++ b/pom.xml
@@ -150,7 +150,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <mainClass>com.juicelabs.fhir.GeneratorKt</mainClass>
+                    <mainClass>com.juicelabs.fhir.generator.GeneratorKt</mainClass>
                 </configuration>
             </plugin>
 
