--- a/pom.xml
+++ b/pom.xml
@@ -14,12 +14,12 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>1.8</java.version>
-        <kotlin.version>1.2.71</kotlin.version>
+        <java.version>11</java.version>
+        <kotlin.version>1.3.0</kotlin.version>
         <gson.version>2.8.5</gson.version>
-        <kotlinpoet.version>1.0.0-RC1</kotlinpoet.version>
-        <slf4j.version>1.6.6</slf4j.version>
-        <logback.version>1.0.9</logback.version>
+        <kotlinpoet.version>1.0.0-RC2</kotlinpoet.version>
+        <slf4j.version>1.7.5</slf4j.version>
+        <logback.version>1.2.3</logback.version>
         <junit.version>5.1.0</junit.version>
     </properties>
 
@@ -28,6 +28,12 @@
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib-jdk8</artifactId>
+            <version>${kotlin.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-reflect</artifactId>
             <version>${kotlin.version}</version>
         </dependency>
 
@@ -41,6 +47,12 @@
             <groupId>com.squareup</groupId>
             <artifactId>kotlinpoet</artifactId>
             <version>${kotlinpoet.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.jetbrains.kotlin</groupId>
+                    <artifactId>kotlin-reflect</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
@@ -88,8 +100,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.0</version>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                 </configuration>
             </plugin>
 
@@ -122,6 +134,7 @@
                     <args>
                         <arg>-Xjsr305=strict</arg>
                     </args>
+                    <!-- needs to be 1.8 until Kotlin targets Java 11 as a valid output -->
                     <jvmTarget>1.8</jvmTarget>
                 </configuration>
                 <dependencies>
@@ -197,6 +210,7 @@
 
             <plugin>
                 <artifactId>maven-jar-plugin</artifactId>
+                <version>3.1.0</version>
                 <configuration>
                     <excludes>
                         <exclude>com/juicelabs/fhir/generator/*.*</exclude>
